DZ Recent posts 1

--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
       </div>
     </div>
   </section>
+  <section class="recent_posts">
+    <div class="recent_posts_container">
+      <div>
+        <h4>Recent posts</h4>
+        <a href="#">View all</a>
+      </div>
+      <div class="recent_posts_box">
+        <article>
+          <h3>Making a design system from scratch</h3>
+          <h4>12 Feb 2020</h4>
+          <h5>Design, Pattern</h5>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </article>
+        <article>
+          <h3>Creating pixel perfect icons in Figma</h3>
+          <h4>12 Feb 2020</h4>
+          <h5>Figma, Icon Design</h5>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </article>
+      </div>
+    </div>
+  </section>
 
 <!--  <section>-->
 <!--    <div style="max-width: 565px; margin: auto; margin-bottom: 100px">-->
@@ -102,26 +124,29 @@
 <!--      </form>-->
 <!--    </div>-->
 <!--  </section>-->
-  <section class="sect_style">
-    <div class="sect_container">
-      <form name="minimal_form" action="#" method="post" target="_blank">
-        <div>
-          <input type="text" name="name" placeholder="Name" class="input_name_budget">
-        </div>
-        <div>
-          <input type="email" name="email" placeholder="Email" class="input_name_budget">
-        </div>
-        <div>
-          <input type="number" name="budget" placeholder="Budget" class="input_name_budget">
-        </div>
-        <div>
-          <textarea name="comment" placeholder="Describe youre project..." class="input_name_budget"></textarea>
-        </div>
-        <button type="submit" class="button_submit"
-        >Send Message</button>
-      </form>
-    </div>
-  </section>
+<!--  <section class="sect_style">-->
+<!--    <div class="sect_container">-->
+<!--      <form name="minimal_form" action="#" method="post" target="_blank">-->
+<!--        <div>-->
+<!--          <input type="text" name="name" placeholder="Name" class="input_name_budget">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--          <input type="email" name="email" placeholder="Email" class="input_name_budget">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--          <input type="number" name="budget" placeholder="Budget" class="input_name_budget">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--          <textarea name="comment" placeholder="Describe youre project..." class="input_name_budget"></textarea>-->
+<!--        </div>-->
+<!--        <button type="submit" class="button_submit"-->
+<!--        >Send Message</button>-->
+<!--      </form>-->
+<!--    </div>-->
+<!--  </section>-->
+
+
+
   <section class="section_works_padding">
     <div class="section_works_size">
       <h2 class="section_works_headline">Featured works</h2>
