DZ Recent posts 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>John_1</title>
+    <title>John</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;900&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
@@ -62,15 +62,11 @@
       <div class="recent_posts_box">
         <article>
           <h3>Making a design system from scratch</h3>
-          <h4>12 Feb 2020</h4>
-          <h5>Design, Pattern</h5>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p><span class="recent_posts_span_date">12 Feb 2020</span><span class="recent_posts_span_text">Design, Pattern</span><br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </article>
         <article>
           <h3>Creating pixel perfect icons in Figma</h3>
-          <h4>12 Feb 2020</h4>
-          <h5>Figma, Icon Design</h5>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p><span class="recent_posts_span_date">12 Feb 2020</span><span class="recent_posts_span_text">Figma, Icon Design</span><br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </article>
       </div>
     </div>
