DZ Recent posts 3

--- a/index.html
+++ b/index.html
@@ -55,18 +55,24 @@
   </section>
   <section class="recent_posts">
     <div class="recent_posts_container">
-      <div>
+      <div class="recent_posts_header_box">
         <h4>Recent posts</h4>
         <a href="#">View all</a>
       </div>
       <div class="recent_posts_box">
         <article>
           <h3>Making a design system from scratch</h3>
-          <p><span class="recent_posts_span_date">12 Feb 2020</span><span class="recent_posts_span_text">Design, Pattern</span><br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <div>
+            <span class="recent_posts_span_date">12 Feb 2020</span><span class="recent_posts_span_text">Design, Pattern</span>
+          </div>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </article>
         <article>
           <h3>Creating pixel perfect icons in Figma</h3>
-          <p><span class="recent_posts_span_date">12 Feb 2020</span><span class="recent_posts_span_text">Figma, Icon Design</span><br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <div>
+            <span class="recent_posts_span_date">12 Feb 2020</span><span class="recent_posts_span_text">Figma, Icon Design</span>
+          </div>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </article>
       </div>
     </div>
