--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;900&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
 <!--  <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Vollkorn:ital@1&display=swap" rel="stylesheet">-->
-  <link rel="stylesheet" href="css/style.css">
+
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 
 
 </head>
@@ -22,10 +23,10 @@
     <nav>
       <ul id="navigation">
         <li>
-          <a href="#">Works</a>
+          <a href="work.html">Works</a>
         </li>
         <li>
-          <a href="#">Blog</a>
+          <a href="blog.html">Blog</a>
         </li>
         <li>
           <a href="#">Contact</a>
